--- a/styles/general.css
+++ b/styles/general.css
@@ -10,5 +10,5 @@ body{
   padding-right: 24px;
   background-color: rgb(248, 248, 248);
   font-family: Roboto,Arial;
-  padding-bottom: 1000px;
+  padding-bottom: 200;
   }
